@@ -1,3 +1,15 @@
+2007-10-26  Kevin McCullough  <kmccullough@apple.com>
+
+        Reviewed by Sam and Steve.
+
+        - Added convenience methods for converting between BSTR and JSStringRefs
+
+        * API/JSStringRefCOM.cpp: Added.
+        (JSStringCreateWithCFString):
+        (JSStringCopyCFString):
+        * API/JSStringRefCOM.h: Added.
+        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
+
 2007-10-26  Mark Rowe  <mrowe@apple.com>
 
         Windows build fix.
